[package]
name = "ssap"
version = "0.1.0"
authors = ["triandco"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/triandco/ssap-rust"
homepage = "https://rust-random.github.io/book"
description = """
Stateless Scale and Perturbation scheme for vector encryption
"""
keywords = ["vector", "encryption", "sap", "distance-comparison preserving"]
categories = ["algorithms"]
autobenches = true
edition = "2024"
rust-version = "1.85"
include = ["src/", "LICENSE-*", "README.md", "COPYRIGHT"]

# Meta-features:
default = ["std", "std_rng", "os_rng", "small_rng", "thread_rng"]
nightly = [] # some additions requiring nightly Rust

[dependencies]
rand = "0.9.0"
rand_distr = "0.5.1"
rayon = "1.10.0"
